[tool.poetry]
name = "aula17-aovivo"
version = "0.1.0"
description = "Meu projeto de API"
authors = ["Felipe Almeida <felipealmeida37@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
